--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href=./"css/reset.css">
+	<link rel="stylesheet" href=./"css/style.css">
 </head>
 <body>
               <div class="d"> find red find red find red find red find red find red find red find red find red find red find red find red </div>
