--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<link rel="stylesheet" href=./"css/reset.css">
-	<link rel="stylesheet" href=./"css/style.css">
+          <link rel="stylesheet" href="./reset.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
               <div class="d"> find red find red find red find red find red find red find red find red find red find red find red find red </div>
@@ -25,6 +25,5 @@
 	 </div>
 
 </body>
-<style type="text/css">
-	</style>
+
 </html>
